# Jetduino

./: .gitignore  LICENSE  README.md
Firmware/: README.md  change_log.txt
Firmware/Source/jetduino/: DHT.cpp  DS1307.cpp  DynamixelSerial.cpp  DynamixelSerial.h  TM1637.cpp  TM1637.h  jetduino.ino
Firmware/Source/v1.2/grove_pi_v1_2_5/: grove_pi_v1_2_5.ino
Firmware/TestSketches/AnalogIn/: AnalogIn.ino
Firmware/TestSketches/DigitalIn/: DigitalIn.ino
Firmware/TestSketches/DigitalOut/: DigitalOut.ino
Firmware/TestSketches/DynamixelServos/: DynamixelServos.ino
Firmware/TestSketches/StandardServos/: StandardServos.ino
Hardware/: README.md
Projects/: README.md
Projects/Sensor_Twitter_Feed/: wifi_twit.py
Projects/Whos_at_the_Door/: whos_at_the_door.py
Script/: install.sh
Software/: README.md
Software/C/: CMakeLists.txt  README.md  jetduino.c  jetduino.h  jetduino_analog_read.c  jetduino_analog_write.c  jetduino_button.c  jetduino_digital_read.c  jetduino_digital_write.c  jetduino_dynamixel_move.c  jetduino_dynamixel_set_register.c  jetduino_dynamixel_synch_move.c  jetduino_led_fade.c  jetduino_standard_servo.c  jetduino_temp_read.c  jetduino_ultrasonic_read.c
Software/Python/: README.md  change_log.txt  dynamixel_endless_turn.py  dynamixel_move.py  dynamixel_set_register.py  dynamixel_synch_move.py  grove_2_coil_latching_relay.py  grove_4_digit_display.py  grove_4_digit_display_test.py  grove_80cm_infrared_proximity_sensor.py  grove_air_quality_sensor.py  grove_analog_read.py  grove_button.py  grove_buzzer.py  grove_chainable_rgb_led.py  grove_collision_sensor.py  grove_compass_example.py  grove_compass_lib.py  grove_dht_pro.py  grove_dry_reed_relay.py  grove_dust_sensor.py  grove_electricity_sensor.py  grove_electromagnet.py  grove_encoder_read.py  grove_firmware_version_check.py  grove_flame_sensor.py  grove_flow_read.py  grove_gas_sensor.py  grove_hcho_sensor.py  grove_i2c_accelerometer.py  grove_i2c_rtc.py  grove_infrared_distance_interrupt.py  grove_infrared_reflective_sensor.py  grove_ir_receiver.py  grove_jetson_gpio.py  grove_led_blink.py  grove_led_fade.py  grove_ledbar.py  grove_light_sensor.py  grove_line_finder.py  (+34 more)
Software/Python/grove_6axis_acc_compass/: grove_6axis_accel_compass_example.py  lsm303d.py
Software/Python/grove_accelerometer_16g/: adxl345.py
Software/Python/grove_barometer_sensors/barometric_sensor_bmp085/: grove_barometer_example_BMP085.py  grove_barometer_lib.py  readme_grove_i2c_barometic_sensor_BMP085.MD
Software/Python/grove_barometer_sensors/barometric_sensor_bmp180/: grove_i2c_barometic_sensor_example.py  readme_grove_i2c_barometic_sensor_BMP180.MD
Software/Python/grove_co2_sensor/: grove_co2_example.py  grove_co2_lib.py
Software/Python/grove_fingerclip_heart_sensor/: grove_fingerclip_heart_sensor.py
Software/Python/grove_gesture_sensor/: gesture_print.py  gesture_value.py  grove_gesture_sensor.py
Software/Python/grove_i2c_adc/: grove_i2c_adc.py  i2c_adc_example.py
Software/Python/grove_i2c_digital_light_sensor/: grove_i2c_digital_light_sensor.py  readme_grove_i2c_digital_light_sensor.MD
Software/Python/grove_i2c_motor_driver/: grove_i2c_motor_driver.py  motor_example.py
Software/Python/grove_i2c_oled_128_64/: grove_128_64_oled.py  grove_128_64_oled_temp.py  jetduino.py
Software/Python/grove_i2c_temp_hum_sensor_mini/: grove_i2c_temp_hum_mini.py  temp_hum_example.py
Software/Python/grove_ir_receiver/: README.md
Software/Python/grove_oled/: grove_i2c_oled_96x96_hello_world.py  grove_oled.py
Software/Python/grove_rgb_lcd/: example.py  example2.py  example3.py  grove_rgb_lcd.py
Software/Python/test_script/: analog_read_test.py  analog_write_test.py  digital_read_test.py  digital_write_pin_test.py  digital_write_test.py  jetduino_pins.py  multi_sensor.py  serial_test.py  servos_test.py
Software/Scratch/: JetduinoScratch.py  grove_rgb_lcd.py  readme.md
Software/Scratch/Grove_Examples/: README.md
